style.css
body {
    background-color: #cfd5e6;
    font-family: Georgia, Helvetica, sans-serif;
	font-size: 16px;
    line-height: 1.5;
}

svg {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.text {
    padding: 20vh 20vw;
}

a {
    z-index: 10;
    position: relative;
}

.source {
    padding: 0 20vw;
}

.source-text {
    padding: 0 20vw 20vh 20vw;
}

.parent {
    padding-top: 20vh;
    display: flex;
    width: 100%;
}
  
.child {
    flex: 1;
    margin: 10px;
}
  
.child:first-child {
    margin-right: 20px;
}

.title-div {
    text-align: left;
}

.title-div h1 {
    font-size: 2.8em;
    line-height: 1.3;
    padding-left: 20vw;
}

h2 {
    font-size: 1.6em;
}

.child img {
    max-width: 160px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

.subtitle {
    padding-top: 100px;
    padding-bottom: 20px;
    padding-left: 20vw;
    padding-right: 20vw;
}

/* Bar Chart */

#bar-chart .label {
    text-anchor: middle;
}

.tooltip.hidden {
    display: none;
}

.tooltip p {
    margin: 0;
}

/* Timeline */


.container {
    height: 100%;
    max-width: 600px;
    width: 100%;
    margin: 0;
    padding: 0;
    /* position: absolute; */
    position: relative;
    height: 100%;
    font-size: 16px;
    line-height: 1.5;
    left: 50%;
}

.container div {
    height: 100%;
    display: block;
    margin: 400px 45px;
}

.container div:first-child {
    margin-top: 100px;
}

.fixed {
    position: fixed;
    
    height: 500px;
    top: 50px;
    /* z-index: 1; */
}

#timeline, #information {
    z-index: 1;
}

#timeline {
    padding-left: 30px;
}

#timeline-div {
    padding-top: 170px;
}

#information {
   height: 200px;
   width: 50vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-bottom: 100px;
}

.text-center.header{
    font: 42px;
}
#information > h3 {
    font-size: 30px;
    font-weight: bold;
}

#information > p,a {
    font-size: 18px;
    margin: 5px;
}

#information > h3 {
    font-size: 18px;
    font-weight: bold;
}

#information > p {
    font-size: 16px;
}

g text.text-timeline {
    opacity: 0;
}

#timeline > g:hover circle  {
    filter: 
        invert(0.5)
        sepia(.5)
        hue-rotate(200deg)
        saturate(10)
        brightness(.5);
}
g:hover text {
    opacity: 1;
}

#timeline-scale{
    margin: 0 auto;
    overflow: scroll;
    overflow-y: hidden;
    z-index: -1 !important;
}

.text-center{
    text-align: center;
}

.scrollyText {
    text-align: justify;
}

.background-rectangle{
    position: relative;
    background-color: #cfd5e6;
    z-index: 999 !important;
}

@media (max-width: 600px) {
    .title-div h1 {
        font-size: 1.6em;
        padding-left: 50px;
    }
}

@media (min-width: 600px) and (max-width: 820px) {
    .title-div h1 {
        font-size: 2.3em;
        padding-left: 50px;
    }
    .child img {
        max-width: 100px;
    }
}

@media (min-width: 1200px) {
    #timeline-scale{
        overflow: hidden;
    }
}

.circle-timeline:hover {
    fill: gray;
}

/* map */

#map-dropdown {
    padding-left: 1000px;
}

#map-div, #bar-chart-div {
    z-index: 10;
    position: relative !important;
}

#tooltip-bars, #tooltip-map {
    z-index: 11;
}

#tooltip-map {
    margin-top: 50px;
}

